# plantclef-2024

./: .gitignore  README.md  last.ckpt  pyproject.toml  requirements.txt  ts-20240123-00-data-analysis.ipynb
experiments/: dsgt_run_v1.csv  lsh-timing.json  lsh-timing_v2.json
experiments/20240415-030743/: checkpoint-1.pth.tar  checkpoint-2.pth.tar  checkpoint-3.pth.tar
notebooks/embedding/: 2024-02-26--OWL-ViT-test.ipynb  20240123-is-OWL-ViT-test.ipynb  20240327-is-dino.ipynb  20240331-mg-image-to-embedding.ipynb
notebooks/modeling/: 20240409-mg-classifier-pytorch-lightning.ipynb  20240412-mg-learning-to-rank.ipynb  20240414-mg-pytorch-petastorm-classifier.ipynb  20240414-mg-torch-distributor-classifier.ipynb  20240421-mg-inference-pipeline.ipynb  20240507-mg-pretrained-dino.ipynb  20240511-mg-grid-pretrained-dino.ipynb  20240517-mg-intersection-preds.ipynb  20240518-mg-wrapped-dino-pretrained.ipynb  20240522-mg-grid-inference.ipynb  dsgt_run.csv  last.ckpt  model-epoch=06-val_accuracy=0.00.ckpt  model-epoch=08-val_accuracy=0.00.ckpt
notebooks/paper/: 202400705-mg-test-image-dimension.ipynb  20240617-mg-umap-plots-paper.ipynb  20240622-mg-tile-plots.ipynb  20240623-mg-embedding-plots.ipynb
notebooks/preprocessing/: 20240123-is-data-analysis.ipynb  (+17 more)
plantclef/: crop_resize_images.py  grid_test_data.py  images_to_parquet.py  model_setup.py  plotting.py  test_to_parquet.py  transforms.py  utils.py
plantclef.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: 20240510-is-image-scrape-uncommon.ipynb  download_extract_dataset.sh  test.py  test_image_scrape.py
(+17 files in other folders)
